--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
         <h5>Total Whishes: <%=data.length %></h5>
         <form id="form">
             <input style="width: 50%; outline: none; border-radius: 15px; border:2px solid black ; height: 30px;"
-                type="text" required name="item" id="addWish" placeholder="Eneter Your Wish">
+                type="text" required name="item" id="addWish" placeholder="Enter Your Wish">
             <input type="submit" value="Add" id="btn">
         </form>
         <div class="result">
